packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_enumerable_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc721_enumerable: ERC721EnumerableComponent::Storage,
    }
    use openzeppelin_token::erc721::extensions::ERC721EnumerableComponent;

    component!(
        path: ERC721EnumerableComponent, storage: erc721_enumerable, event: ERC721EnumerableEvent,
    );

    impl ERC721EnumerableInternalImpl = ERC721EnumerableComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721EnumerableEvent: ERC721EnumerableComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

ERC721Enumerable

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
========
Warning: The ERC721Enumerable component requires calling `self.erc721_enumerable.before_update(...)`
inside the `ERC721HooksTrait::before_update` hook, and it looks like it is missing.

This may lead to incorrect token enumeration data.
====

AuxData:

None
