packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_enumerable_with_hooks.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    use openzeppelin_token::erc721::ERC721Component;
    use starknet::ContractAddress;
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub erc721_enumerable: ERC721EnumerableComponent::Storage,
    }
    #[constructor]
    fn constructor(ref self: ContractState) {
        self.erc721_enumerable.initializer();
    }
    impl ERC721HooksImpl of ERC721Component::ERC721HooksTrait<ContractState> {
        fn before_update(
            ref self: ERC721Component::ComponentState<ContractState>,
            to: ContractAddress,
            token_id: u256,
            auth: ContractAddress,
        ) {
            let mut contract_state = self.get_contract_mut();
            contract_state.erc721_enumerable.before_update(to, token_id);
        }
    }
    use openzeppelin_token::erc721::extensions::ERC721EnumerableComponent;

    component!(
        path: ERC721EnumerableComponent, storage: erc721_enumerable, event: ERC721EnumerableEvent,
    );

    impl ERC721EnumerableInternalImpl = ERC721EnumerableComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721EnumerableEvent: ERC721EnumerableComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
