packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_erc721_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    use openzeppelin_token::erc721::ERC721HooksEmptyImpl;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        erc721: ERC721Component::Storage,
    }

    use openzeppelin_token::erc721::ERC721Component;

    component!(path: ERC721Component, storage: erc721, event: ERC721Event);

    impl ERC721InternalImpl = ERC721Component::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        ERC721Event: ERC721Component::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initilizers for the following components are missing:

ERC721

This may lead to unexpected behavior. We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
